<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_amount_to_add"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="15dp"
    tools:ignore="ExtraText" >

    <Spinner
        android:id="@+id/nameSpinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="2" />

    <EditText
        android:id="@+id/edTAmountNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Amount"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575" />

</LinearLayout>

    <EditText
        android:id="@+id/edTNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/optional_you_can_add_a_note"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>